--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule ".zsh.d/plugins/zsh-syntax-highlighting"]
-	path = .zsh.d/plugins/zsh-syntax-highlighting
+[submodule "dotfiles/.zsh.d/plugins/zsh-syntax-highlighting"]
+	path = dotfiles/.zsh.d/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
-[submodule ".zsh.d/plugins/zsh-completions"]
-	path = .zsh.d/plugins/zsh-completions
+[submodule "dotfiles/.zsh.d/plugins/zsh-completions"]
+	path = dotfiles/.zsh.d/plugins/zsh-completions
 	url = https://github.com/zsh-users/zsh-completions
-[submodule ".zsh.d/plugins/zsh-history-substring-search"]
-	path = .zsh.d/plugins/zsh-history-substring-search
+[submodule "dotfiles/.zsh.d/plugins/zsh-history-substring-search"]
+	path = dotfiles/.zsh.d/plugins/zsh-history-substring-search
 	url = https://github.com/zsh-users/zsh-history-substring-search
-[submodule ".zsh.d/plugins/zsh-autosuggestions"]
-	path = .zsh.d/plugins/zsh-autosuggestions
+[submodule "dotfiles/.zsh.d/plugins/zsh-autosuggestions"]
+	path = dotfiles/.zsh.d/plugins/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
