--- a/windows/AppData/Roaming/wsltty/config
+++ b/windows/AppData/Roaming/wsltty/config
@@ -5,10 +5,9 @@ FontHeight=12
 FontChoice=CJK:1;Private:2
 Font1=Noto Sans CJK JP Regular
 Font2=SauceCodePro NF
-Locale=C
+Locale=ja_JP
 Charset=UTF-8
 FontSmoothing=full
-ThemeFile=solarized_dark
 Transparency=off
 OpaqueWhenFocused=yes
 CursorType=block
@@ -18,3 +17,26 @@ BellTaskbar=no
 Columns=110
 Rows=40
 ClicksPlaceCursor=yes
+
+ForegroundColour=131,148,150
+BackgroundColour=0,43,54
+CursorColour=131,148,150
+
+Black=0,43,54
+BoldBlack=7,54,66
+Red=220,50,47
+BoldRed=203,75,22
+Green=133,153,0
+BoldGreen=88,110,117
+Yellow=181,137,0
+BoldYellow=101,123,131
+Blue=38,139,210
+BoldBlue=131,148,150
+Magenta=211,54,130
+BoldMagenta=108,113,196
+Cyan=42,161,152
+BoldCyan=147,161,161
+White=238,232,213
+BoldWhite=253,246,227
+CtrlShiftShortcuts=yes
+
