--- a/dotfiles/.config/gtk-3.0/settings.ini
+++ b/dotfiles/.config/gtk-3.0/settings.ini
@@ -1,13 +1,13 @@
 [Settings]
 gtk-theme-name=Yaru
 gtk-icon-theme-name=Yaru
-gtk-font-name=Sans 10
+gtk-font-name=Noto Sans CJK JP Medium 10
 gtk-cursor-theme-name=Yaru
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
-gtk-menu-images=0
+gtk-menu-images=1
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
